# resolveops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
deploy/observability/: otel-collector-config.yaml  tempo-config.yaml
portal/: README.md  index.html  package-lock.json  package.json
portal/src/: App.tsx  index.css  types.ts
resolveops_core/: config.py  logging.py
resolveops_core/agents/: base.py  classifier.py  communication.py  config.py  diagnostic.py  escalation.py  knowledge.py  resolution.py  supervisor.py  tool_executor.py  triage.py  validator.py
resolveops_core/db/: models.py  repository.py
resolveops_core/evaluation/: metrics.py
resolveops_core/graph/: checkpoint.py  edges.py  nodes.py  runner.py  state.py  state_store.py  workflow.py
resolveops_core/infra/: queue.py  redis_client.py
resolveops_core/integrations/: ticketing.py
resolveops_core/messaging/: __init__.py  factory.py  kafka_adapter.py  protocol.py  rabbitmq_adapter.py  types.py
resolveops_core/prompts/: loader.py
resolveops_core/rag/: knowledge_base.py
resolveops_core/telemetry/: __init__.py  log_context.py  log_export.py  setup.py  (+1 more)
scripts/: clear_db.sql  docker_infra.ps1  run_local.ps1  seed_kb.py  start_all.ps1  start_apps.ps1  start_docker.ps1  stop_all.ps1  stop_apps.ps1  stop_docker.ps1
tests/: test_agents.py  test_checkpoint.py  test_graph.py  test_graph_logging.py  test_graph_worker.py  test_log_correlation.py  test_messaging_factory.py  test_state.py  test_telemetry.py
(+25 files in other folders)
